--- a/TechScreen.Web/TechScreen.Web.csproj
+++ b/TechScreen.Web/TechScreen.Web.csproj
@@ -79,6 +79,68 @@
     <Content Include="App_Data\aspnet-WebSite6-20121006061722_log.ldf">
       <DependentUpon>aspnet-WebSite6-20121006061722.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\Images\largBtn.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\bootstrap.min.css" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\docs.css" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font-awesome-ie7.min.css" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font-awesome.min.css" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font\fontawesome-webfont.svg" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\apple-touch-icon-114-precomposed.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\apple-touch-icon-144-precomposed.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\apple-touch-icon-57-precomposed.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\apple-touch-icon-72-precomposed.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\favicon.ico" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\ico\favicon.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\img\bs-docs-masthead-pattern.png" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\bootstrap.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\demo.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\docs.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\google-code-prettify\prettify.css" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\google-code-prettify\prettify.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\jquery-1.8.3.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\jquery-1.9.0.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\js\jquery-ui-1.10.0.custom.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_glass_75_ffffff_1x400.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-bg_inset-soft_95_fef1ec_1x100.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\images\ui-icons_f6cf3b_256x240.png" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\jquery-ui-1.10.0.custom.css" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\jquery-ui-1.9.2.custom.css" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\jquery.ui.1.10.0.ie.css" />
+    <Content Include="Content\jquery-ui-bootstrap\css\custom-theme\jquery.ui.1.9.2.ie.css" />
+    <Content Include="Content\jquery-ui-bootstrap\css\demo.css" />
+    <Content Include="Content\jquery-ui-bootstrap\extra.html" />
+    <Content Include="Content\jquery-ui-bootstrap\index.html" />
+    <Content Include="Content\jquery-ui-bootstrap\js\demo.js" />
+    <Content Include="Content\jquery-ui-bootstrap\js\jquery-1.8.3.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\js\jquery-ui-1.9.2.custom.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\old_index.html" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-Date-Range-Picker\css\ui.daterangepicker.css" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-Date-Range-Picker\index.html" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-Date-Range-Picker\js\date.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-Date-Range-Picker\js\daterangepicker.jQuery.compressed.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-Date-Range-Picker\js\daterangepicker.jQuery.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\css\enhanced.css" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\images\icon-generic.gif" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\images\icon-image.gif" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\images\icon-media.gif" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\images\icon-zip.gif" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\js\enhance.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\jQuery-UI-FileInput\js\fileinput.jquery.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\wijmo\jquery.bgiframe-2.1.3-pre.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\wijmo\jquery.mousewheel.min.js" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\wijmo\jquery.wijmo-open.1.5.0.css" />
+    <Content Include="Content\jquery-ui-bootstrap\third-party\wijmo\jquery.wijmo-open.1.5.0.min.js" />
     <Content Include="Content\bootstrap\css\bootstrap-responsive.css" />
     <Content Include="Content\bootstrap\css\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap\css\bootstrap.css" />
@@ -430,6 +492,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BootstrapMaster.Master" />
+    <Content Include="Content\jquery-ui-bootstrap\.gitignore" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font\fontawesome-webfont.eot" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font\fontawesome-webfont.ttf" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font\fontawesome-webfont.woff" />
+    <Content Include="Content\jquery-ui-bootstrap\assets\css\font\FontAwesome.otf" />
+    <Content Include="Content\jquery-ui-bootstrap\README.md" />
     <None Include="Properties\PublishProfiles\Profile1.pubxml" />
   </ItemGroup>
   <PropertyGroup>
